docs/api/qiskit/0.19/qiskit.circuit.library.Measure.mdx
---
title: Measure (v0.19)
description: API reference for qiskit.circuit.library.Measure in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.Measure
---

# Measure

<Class id="qiskit.circuit.library.Measure" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/measure.py" signature="Measure" modifiers="class">
  Quantum measurement in the computational basis.

  Create new measurement instruction.

  ## Attributes

  <span id="measure-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.Measure.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="measure-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.Measure.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="measure-params" />

  ### params

  <Attribute id="qiskit.circuit.library.Measure.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="measure-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.Measure.add_decomposition" signature="Measure.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="measure-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.Measure.assemble" signature="Measure.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="measure-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.Measure.broadcast_arguments" signature="Measure.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="measure-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.Measure.c_if" signature="Measure.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="measure-copy" />

  ### copy

  <Function id="qiskit.circuit.library.Measure.copy" signature="Measure.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="measure-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.Measure.inverse" signature="Measure.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="measure-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.Measure.is_parameterized" signature="Measure.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="measure-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.Measure.mirror" signature="Measure.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="measure-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.Measure.qasm" signature="Measure.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="measure-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.Measure.repeat" signature="Measure.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

